SNOW-1732207 A small fix to fix test (#256)
SNOW-1732207 A small fix to make the test work